{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 70,
  "lineage": "d5660159-924b-6ad8-4ecd-faf313c7f07a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825386:internet-gateway/igw-0bb993eea0ba793be",
            "id": "igw-0bb993eea0ba793be",
            "owner_id": "792394825386",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "MainIGW",
              "Owner": "InfraTeam",
              "Project": "App1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "MainIGW",
              "Owner": "InfraTeam",
              "Project": "App1"
            },
            "vpc_id": "vpc-0ccba6e4ba0bba0fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825386:route-table/rtb-091dea82e90e4482d",
            "id": "rtb-091dea82e90e4482d",
            "owner_id": "792394825386",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "Production",
              "Name": "PrivateRT",
              "Owner": "InfraTeam",
              "Project": "App1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "PrivateRT",
              "Owner": "InfraTeam",
              "Project": "App1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccba6e4ba0bba0fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792394825386",
            "id": "rtb-091dea82e90e4482d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825386:route-table/rtb-011eb1481a61d44ae",
            "id": "rtb-011eb1481a61d44ae",
            "owner_id": "792394825386",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb993eea0ba793be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "PublicRT",
              "Owner": "InfraTeam",
              "Project": "App1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "PublicRT",
              "Owner": "InfraTeam",
              "Project": "App1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccba6e4ba0bba0fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792394825386",
            "id": "rtb-011eb1481a61d44ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01501673d5de02a8f",
            "region": "us-east-1",
            "route_table_id": "rtb-091dea82e90e4482d",
            "subnet_id": "subnet-01cabd3b4c66f59ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e7e05cbf0f5ec08",
            "region": "us-east-1",
            "route_table_id": "rtb-011eb1481a61d44ae",
            "subnet_id": "subnet-05b8b8279dd9b8a5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public-subnet",
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825386:subnet/subnet-01cabd3b4c66f59ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cabd3b4c66f59ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792394825386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "private-subnet",
              "Owner": "InfraTeam",
              "Project": "App1",
              "Role": "Private"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "private-subnet",
              "Owner": "InfraTeam",
              "Project": "App1",
              "Role": "Private"
            },
            "vpc_id": "vpc-0ccba6e4ba0bba0fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792394825386",
            "id": "subnet-01cabd3b4c66f59ab",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825386:subnet/subnet-05b8b8279dd9b8a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b8b8279dd9b8a5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792394825386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "public-subnet",
              "Owner": "InfraTeam",
              "Project": "App1",
              "Role": "Public"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "public-subnet",
              "Owner": "InfraTeam",
              "Project": "App1",
              "Role": "Public"
            },
            "vpc_id": "vpc-0ccba6e4ba0bba0fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792394825386",
            "id": "subnet-05b8b8279dd9b8a5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792394825386:vpc/vpc-0ccba6e4ba0bba0fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c932b6c7b40504c",
            "default_route_table_id": "rtb-0518066f881363fe8",
            "default_security_group_id": "sg-08829365ee23f56f2",
            "dhcp_options_id": "dopt-0d009eda4d7de2451",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccba6e4ba0bba0fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0518066f881363fe8",
            "owner_id": "792394825386",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc",
              "Owner": "InfraTeam",
              "Project": "App1",
              "Role": "Network"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc",
              "Owner": "InfraTeam",
              "Project": "App1",
              "Role": "Network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}